[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
cmkts-cli = "cmkts_server.cli:hello"

[project]
name = "cmkts_server"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "requests",
    "polars",
]